<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:src="@drawable/main_screen_header" />

    <Button
        android:id="@+id/identifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="@dimen/app_default_padding"
        android:text="@string/main_identify_person"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/viewRecentSearchesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_default_padding"
        android:background="@color/colorAccent"
        android:padding="@dimen/app_default_padding"
        android:text="@string/main_recent_searches"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/viewSavedSearchesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_default_padding"
        android:background="@color/colorAccent"
        android:padding="@dimen/app_default_padding"
        android:text="@string/main_saved_searches"
        android:textColor="@android:color/white" />
</LinearLayout>